Fix css overflow anomaly

--- a/src/app/components/animal/animal.component.scss
+++ b/src/app/components/animal/animal.component.scss
@@ -1,11 +1,12 @@
 .animal-container {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
 }
 
 img {
+    width: 500px;
+    height: fit-content;
     margin-top: 20px;
     border-radius: 10px;
     border: 1px solid black;
